(massive) restruct flavor and mania generator

--- a/-[ LITEST ]- all-in-one/mania/generator/skin.mania.ini.tmpl
+++ b/-[ LITEST ]- all-in-one/mania/generator/skin.mania.ini.tmpl
@@ -1,7 +1,5 @@
-{{ defineDatasource "config" "config.mania.json" -}}
+{{ defineDatasource "config" "config.json" -}}
 {{ "" }}
-// The following part is auto-generated.
-// See flavor/etc/config.mania.json for more details.
 {{ range $unused0, $entry := (ds "config").keys -}}
 {{   $width := $entry.width -}}
 {{   $line_width := $entry.line_width -}}
