(mania) update note and key images

--- a/LITE/mania/generator/skin.mania.ini.tmpl
+++ b/LITE/mania/generator/skin.mania.ini.tmpl
@@ -27,8 +27,8 @@ KeysUnderNotes: 1
 
 // keys
 {{   range $i, $color := $entry.colors -}}
-KeyImage{{ $i }}: mania/keys/k
-KeyImage{{ $i }}D: mania/keys/kd
+KeyImage{{ $i }}: mania/keys/key
+KeyImage{{ $i }}D: mania/keys/keydown
 {{   end -}}
 {{   "" }}
 // notes
